# excel-emulator

./: .gitignore  Cargo.toml  README.md
assets/: basic.xlsx  data_types.xlsx  functions.xlsx  test3.xlsx
excel-emulator-macro/: Cargo.toml  LICENSE
from-args-derive/: Cargo.toml
from-args-derive/src/: lib.rs
function-macro/: Cargo.toml
function-macro/src/: lib.rs
parse/: Cargo.toml
parse/src/: excel.lalrpop  lib.rs
src/: bin.rs  cell.rs  dependency.rs  errors.rs  evaluate.rs  excel.lalrpop  function.rs  lexer.rs  lib.rs  parse.rs  range.rs  reference.rs  sheet.rs  spreadsheet.rs  tree.rs  utils.rs  workbook.rs
src/evaluate/: mod.rs  value.rs
src/function/: mod.rs  xirr.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  expression.rs  mod.rs
tree/: Cargo.toml
tree/src/: lib.rs
utils/: generate_benchmark.sh  generate_flamegraph.sh
