[package]
name = "excel-emulator2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.61"
chrono = "0.4.22"
function-macro = { version = "0.1.0", path = "function-macro" }
lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", branch = "master" }
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop.git", branch = "master" }
ndarray = "0.15.6"
petgraph = "0.6.2"
quick-xml = { version = "0.23.0", features = ["serde", "serialize", "encoding"] }
regex = "1.6.0"
serde = "1.0.143"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }
thiserror = "1.0.31"
zip = "0.6.2"

[build-dependencies]
lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", branch = "master" }
