[package]
name = "excel-emulator"
authors = "Nate Duncan"
version = "0.1.0"
edition = "2021"
description = "Convert Excel workbooks into Rust logic."
readme = "README.md"
repository = "https://github.com/natefduncan/excel-emulator.git"
keywords = ["excel", "xlsx", "emulator"]
categories = ["command-line-utilities", "parsing"] 

[lib]
name = "excel_lib"
path = "src/lib.rs"

[[bin]]
name = "excel"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.61"
chrono = "0.4.22"
clap = { version = "3.2.19", features = ["derive"] }
function-macro = { version = "0.1.0", path = "function-macro" }
ndarray = "0.15.6"
nom = "7.1.1"
petgraph = "0.6.2"
quick-xml = { version = "0.23.0", features = ["serde", "serialize", "encoding"] }
regex = "1.6.0"
serde = "1.0.143"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }
thiserror = "1.0.31"
zip = "0.6.2"
libmath = "0.2.1"
indicatif = "0.17.1"

[build-dependencies]
lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", branch = "master" }
